readme update and sass imports

--- a/dev/styles/main.sass
+++ b/dev/styles/main.sass
@@ -1,16 +1,5 @@
-.navbar
-  width: 100%
-  
-section
-  padding: 3em 1em 3em 1em
-  
-section.violet
-  color: white
-  background-color: #6610f2
-
-section.yellow
-  color: #333333
-  background-color: #ffc107
-  
-.carousel-inner
-  max-height: 60vh
+//main style
+@import variables
+@import layout
+@import global
+@import queries
