add linter, fix error stops

--- a/dev/html/main.pug
+++ b/dev/html/main.pug
@@ -4,34 +4,22 @@ main.main
       div.col
         h2 Mauris elit voltotur.
         p Lorem ipsum dolor sit amet mauris. Cras dignissim. Pellentesque fringilla vel, metus. Donec aliquam eget, facilisis vel, wisi. Sed aliquet id, eleifend placerat. Curabitur nunc. Vivamus malesuada ultricies iaculis massa. Curabitur elit. Mauris eros bibendum tempus. Morbi congue odio a enim ac ipsum. Proin consectetuer arcu erat id lorem. Nunc consectetuer adipiscing elit. Curabitur volutpat massa mattis ac, cursus odio. Cras nec egestas quis, libero.
-  #carouselExampleControls.carousel.slide(data-ride='carousel')
-    .carousel-inner
-      .carousel-item.active
-        img.d-block.w-100(src='images/pexels-photo-213979.jpeg', alt='First slide')
-      .carousel-item
-        img.d-block.w-100(src='images/pexels-photo-234605.jpeg', alt='Second slide')
-      .carousel-item
-        img.d-block.w-100(src='images/pexels-photo-458839.jpeg', alt='Third slide')
-    a.carousel-control-prev(href='#carouselExampleControls', role='button', data-slide='prev')
-      span.carousel-control-prev-icon(aria-hidden='true')
-      span.sr-only Previous
-    a.carousel-control-next(href='#carouselExampleControls', role='button', data-slide='next')
-      span.carousel-control-next-icon(aria-hidden='true')
-      span.sr-only Next
+  section.slider
+    include slider.pug
   section.container
     div.row
       div.col
         h2 Mauris elit voltotur.
         p Lorem ipsum dolor sit amet mauris. Cras dignissim. Pellentesque fringilla vel, metus. Donec aliquam eget, facilisis vel, wisi. Sed aliquet id, eleifend placerat. Curabitur nunc. Vivamus malesuada ultricies iaculis massa. Curabitur elit. Mauris eros bibendum tempus. Morbi congue odio a enim ac ipsum. Proin consectetuer arcu erat id lorem. Nunc consectetuer adipiscing elit. Curabitur volutpat massa mattis ac, cursus odio. Cras nec egestas quis, libero.
         button.btn.btn-primary(type='button') Primary
-  section.container
-    div.row
+  section.container-fluid.dark
+    div.container.row.mx-auto
       div.col
-        h2 Mauris elit voltotur.
+        h3 Mauris elit voltotur.
         p Lorem ipsum dolor sit amet mauris. Cras dignissim. Pellentesque fringilla vel, metus. Donec aliquam eget, facilisis vel, wisi. Sed aliquet id, eleifend placerat. Curabitur nunc. Vivamus malesuada ultricies iaculis massa. Curabitur elit. Mauris eros bibendum tempus. Morbi congue odio a enim ac ipsum. Proin consectetuer arcu erat id lorem. Nunc consectetuer adipiscing elit. Curabitur volutpat massa mattis ac, cursus odio. Cras nec egestas quis, libero.
       div.col
-        h2 Mauris elit voltotur.
-        p Lorem ipsum dolor sit amet mauris. Cras dignissim. Pellentesque fringilla vel, metus. Donec aliquam eget, facilisis vel, wisi. Sed aliquet id, eleifend placerat. Curabitur nunc. Vivamus malesuada ultricies iaculis massa. Curabitur elit. Mauris eros bibendum tempus. Morbi congue odio a enim ac ipsum. Proin consectetuer arcu erat id lorem. Nunc consectetuer adipiscing elit. Curabitur volutpat massa mattis ac, cursus odio. Cras nec egestas quis, libero. Praesent lacinia id, luctus quis.
+        h3 Mauris elit voltotur.
+        p Lorem ipsum dolor sit amet mauris. Cras dignissim. Pellentesque fringilla vel, metus. Donec aliquam eget, facilisis vel, wisi. Sed aliquet id, eleifend placerat. Curabitur nunc. Vivamus malesuada ultricies iaculis massa. Curabitur elit. Mauris eros bibendum tempus. Morbi congue odio a enim ac ipsum. Proin consectetuer arcu erat id lorem. Nunc consectetuer adipiscing elit. Curabitur volutpat massa mattis ac, cursus odio. Cras nec egestas quis, libero.
   section.container
     div.row
       div.col
