--- a/dev/styles/_global.sass
+++ b/dev/styles/_global.sass
@@ -15,8 +15,8 @@ section.yellow
   
 section.dark
   color: white
-  background-color: #333333
-//nie powinno być nestingu section i yellow dark itd?
+  background-color: red
+//nie powinno byfć nestingu section i yellow dark itd?
   
 
 .carousel-inner
