little changes in styles and js concatenation tamplate

--- a/dev/styles/_global.sass
+++ b/dev/styles/_global.sass
@@ -1,23 +1,23 @@
 //global styles
 .navbar
   width: 100%
-  
+
 section
   padding: 3em 0 3em 0
-  
+
 section.violet
-  color: white
-  background-color: #6610f2
+  color: $white
+  background-color: $indigo
 
 section.yellow
-  color: #333333
-  background-color: #ffc107
-  
+  color: $gray-dark
+  background-color: $yellow
+
 section.dark
-  color: white
-  background-color: red
+  color: $white
+  background-color: $red
 //nie powinno byfć nestingu section i yellow dark itd?
-  
+
 
 .carousel-inner
   max-height: 60vh
