add color paletts

--- a/dev/styles/_global.sass
+++ b/dev/styles/_global.sass
@@ -6,18 +6,17 @@ section
   padding: 3em 0 3em 0
 
 section.violet
-  color: $white
-  background-color: $indigo
+  color: $grey1
+  background-color: $dpurple9
 
 section.yellow
-  color: $gray-dark
-  background-color: $yellow
+  color: $grey9
+  background-color: $amber7
 
-section.dark
-  color: $white
-  background-color: $red
+.dark
+  color: $grey1
+  background-color: $bgrey9
 //nie powinno byfć nestingu section i yellow dark itd?
-
 
 .carousel-inner
   max-height: 60vh
