--- a/dev/html/index.pug
+++ b/dev/html/index.pug
@@ -1,11 +1,11 @@
 doctype html
 html(lang="en")
   head
-    title My Site - #{title}
+    title sodakit - front
     meta(charset="UTF-8")
-    meta(name="description" content="description")
-    meta(name="keywords" content="HTML,CSS,XML,JavaScript")
-    meta(name="author" content="John Doe")
+    meta(name="description" content="sodakit page")
+    meta(name="keywords" content="key, words")
+    meta(name="author" content="Mateusz Stomski")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous")
     script(src='https://use.fontawesome.com/ef3515f844.js')
